crates/wac-parser/tests/resolution/fail/invalid-import-type.wac
type x = u32;
import x: x;